# GUItar

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
Dependencies/: CMakeLists.txt
GUItar/: CMakeLists.txt
GUItar/include/guitar/: application.hpp  events.hpp  guitar.hpp  image.hpp  input.hpp  layout.hpp  resources.hpp  xml.hpp
GUItar/src/: application.cpp  application_loop.cpp  application_overrides.cpp  events.cpp  image.cpp  input.cpp  layout.cpp  layout_draw.cpp  resources.cpp  tinyxml2.cpp  xml.cpp
GUItar/src/guitar/: application.cpp  layout.cpp  resources.cpp
GUItar/src/imgui/: imgui_demo.cpp
GUItar/src/imgui/backends/: imgui_impl_glfw.cpp
GUItar/src/tinyxml2/: tinyxml2.cpp
Test/: CMakeLists.txt
Test/res/app/: config.xml
Test/res/image/: logo.xml
Test/res/layout/: demo.xml  imxml.xsd  main.xml
Test/res/schema/: ImAppXML.xsd  ImGuiXML.xsd
Test/resources/app/: config.xml
Test/resources/image/: logo.xml
Test/resources/layout/: demo.xml  main.xml
Test/resources/schema/: ImAppXML.xsd  ImGuiXML.xsd
Test/src/: main.cpp
Test/src/test/: main.cpp
include/guitar/: application.hpp  guitar.hpp  layout.hpp  resources.hpp  xml.hpp
include/imgui/backends/: imgui_impl_glfw.h
res/layout/: main.xml
src/guitar/: application.cpp  guitar.cpp  layout.cpp  resources.cpp
src/imgui/: imgui.cpp
src/imgui/backends/: imgui_impl_opengl3.cpp
src/test/: main.cpp
